Fixed station explorer content overlapping player block.

--- a/static/css/player.less
+++ b/static/css/player.less
@@ -21,7 +21,7 @@
     position:           fixed;
     left:               0;
     right:              0;
-    top:                @playerHeight;
+    top:                (@playerHeight + 0.2rem);
     bottom:             0;
     height:             auto;
 }
